--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,8 @@ body {
     width: 100vw;
     height: 100px;
     background-color: #282828;
+    position: fixed;
+    z-index: 800;
 }
 
 /* Sidebar rules */
@@ -41,4 +43,39 @@ body {
         width: 100%;
         height: 80px;
         background-color: rgba(0, 0, 0, .5);
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 999;
     }
+
+        #button {
+            /* debug */
+            width: 20%;
+            height: 70%;
+            border: 1px solid #fff;
+            border-radius: 25px;
+            float: right;
+            margin-top: 15px;
+        }
+    
+    #albums {
+        margin-top: 100px;
+        overflow-y: scroll;
+    }    
+
+        .row {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            /* DEBUG */
+            height: 200px;
+        }  
+        
+            .card {
+                /* debug */
+                width: calc((100% / 6) - 10px);
+                height: 100px;
+                background-color: #fff;
+            }
