--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,21 +29,81 @@ body {
     gap: 40px;
 }
 
+a {
+    text-decoration: none;
+    color: #515151;
+}
+
+ul {
+    list-style-type: none;
+}
 /* Sidebar rules */
 #sidebar {
     background-color: #000;
-    width: 150px;
+    width: 250px;
     height: 100%;
+    padding-left: 20px;
     /* DEBUG */
 }
 
+    #logo {
+        max-width: 60%;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+    
     .sidebox {
         /* debug */
-        width: 80%;
-        height: 100px;
-        margin-bottom: 20px;
-        border: 1px dashed #fff;
+        /* width: 80%; */
+        /* height: 100px; */
+        margin-bottom: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        /* border: 1px dashed #fff; */
     }
+
+        .sidebox h3 {
+            color: #515151;
+            font-size: 13px;
+            font-weight: 500;
+        }
+
+        .icon {
+            width: 15%;
+            filter: invert(.5);
+        }
+
+
+    #playlist {
+        color: #fff;
+        font-size: 13px;
+    }
+    
+        #sidebar li {
+            font-size: 13px;
+            font-weight: 700;
+            margin-bottom: 10px;
+        }
+
+        #small-icon {
+            width: 18px;
+        }
+        
+        .sidebox.install {
+            margin-top: 40px;
+            border-bottom: 1px solid #515151;
+            max-width: 80%;
+            gap: 10px;
+        }
+
+        .profile h3 {
+            color: #fff;
+        }
+
+        .profile .icon {
+            width: 20px;
+        }
 
 /* Content rules */
 #content {
@@ -53,7 +113,7 @@ body {
 }
 
     #upgrade {
-        width: 100%;
+        width: calc(100% - 200px);
         height: 80px;
         background-color: rgba(0, 0, 0, .5);
         position: fixed;
