--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,13 +110,13 @@ ul {
         }
 
         #low-sec {
-            margin-top: 25%;
+            margin-top: 20%;
         }
 
 /* Content rules */
 #content {
     background-color: #141922;
-    width: calc(100% - 150px);
+    flex-grow: 1;
     height: 100%;
 }
 
@@ -132,13 +132,19 @@ ul {
 
         #button {
             /* debug */
-            width: 20%;
-            height: 70%;
+            /* width: 20%; */
+            /* height: 70%; */
             border: 1px solid #fff;
             border-radius: 25px;
             float: right;
             margin-top: 15px;
+            padding: 10px;
         }
+
+            #button h5 {
+                font-size: 10px;
+                color: #fff;
+            }
     
     #albums {
         height: calc(100% - 80px);
@@ -186,10 +192,7 @@ ul {
         display: none;
     }
 
-    #content {
-        width: 90%;
-    }
-
+    
     #upgrade {
         width: 90%;
     }
