--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,6 +118,7 @@ ul {
     background-color: #141922;
     flex-grow: 1;
     height: 100%;
+    overflow-y: auto;
 }
 
     #upgrade {
@@ -138,6 +139,7 @@ ul {
             border-radius: 25px;
             float: right;
             margin-top: 15px;
+            margin-right: 15px;
             padding: 10px;
         }
 
@@ -149,7 +151,7 @@ ul {
     #albums {
         height: calc(100% - 80px);
         margin-top: 100px;
-        overflow-y: scroll;
+        padding-left: 20px;
     }    
 
         .row {
@@ -157,8 +159,11 @@ ul {
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
+            margin-top: 20px;
+            margin-bottom: 250px;
             /* DEBUG */
-            height: 200px;
+            /* height: 200px; */
+
         }  
         
             .card {
@@ -167,6 +172,44 @@ ul {
                 height: 100px;
                 background-color: #fff;
             }
+
+                .card img {
+                    max-width: 100%;
+                }
+
+                .card h5 {
+                    color: #fff;
+                }
+
+
+    #nav-cont {
+        /* margin-top: 90px; */
+        /* margin-left: 300px; */
+        display: flex;
+        flex-wrap: wrap;
+        gap: 25px;
+    }
+    
+    #nav-wra {
+        width: 50%;
+        margin: 90px auto;
+    }
+        #nav-cont li {
+            font-size: 13px;
+            color: #6f7377;
+        }
+
+
+    .title {
+        font-size: 20px;
+        color: #fff;
+        margin-bottom: 5px;
+    }
+    
+    .sub-title {
+        font-size: 15px;
+        color: #6f7377;
+    }
 
             
             
