--- a/CSS/style.css
+++ b/CSS/style.css
@@ -214,14 +214,145 @@ ul {
             
 /*Bottom bar rules*/
 .box {
+    display: flex;
     /* debug */
-    width: calc((100% / 3) - 40px);
+    width: calc((100% / 5) - 40px);
     height: 80%;
-    border: 1px dashed #fff;
 }
 
+    #track {
+        display: flex;
+        padding: 15px;
+    }
+
+        #cover {
+            width: 70px;
+            height: 100px;
+        }
+        
+        #cover img {
+            max-width: 50px;
+        }
+
+       #name {
+        width: 100px;
+        height: 100px;
+        font-size: 14px;
+        padding-top: 10px;
+       }
+
+       #name h5 {
+        color: #fff;
+       }
+
+    .player-icon {
+        margin-top: 24px;
+        margin-right: 10px;
+        font-size: 18px;        
+    }   
+
+#console {
+    /* debug */
+    min-width: 40%;
+    min-height: 70px;
+    /* border: 1px dashed #fff; */
+}
+
+    #top {
+        display: flex;
+        justify-content: space-between;
+        /* align-items: center; */
+        /* debug */
+        width: 30%;
+        /* height: 35px; */
+        /* background-color: aqua; */
+        margin: 0 auto;
+    }
+
+        #play {
+            font-size: 25px;
+        }
+
+       .player-icon.center i {
+        color: #fff;
+       }
+
+    #bot {
+        display: flex;
+        justify-content: center;
+        /* debug */
+        width: 100%;
+        height: 35px;
+        position: relative;
+        /* background-color: chocolate; */
+    }
+
+        .time {
+            /* debug */
+            width: 80%;
+            height: 4px;
+            background-color: #5a5a5a;
+            margin: 10px auto;
+        }
+
+        .time.white {
+            /* debug */
+            width: 20%;
+            height: 4px;
+            background-color: #c1c1c1;
+            position: absolute;
+            bottom: 11px;
+            left: 51px;
+            cursor: pointer;
+        }
+
+        .time.white:hover {
+            background-color: #adff2f;
+        }
+
+        .numbers {
+            font-size: 10px;
+            color: #fff;
+        }
+
+        .numbers.start {
+            position: absolute;
+            bottom: 17px;
+            left: 19px;
+        }
+
+        .numbers.end {
+            position: absolute;
+            right: 30px;
+            bottom: 17px;
+        }
 
 
+    
+        .player-icon.right {
+            margin-left: 10px;
+            font-size: 18px;
+        }
+
+        .player-icon.right i {
+            color: #fff;
+        }
+    
+        .time.short {
+        width: 40%;
+        margin-top: 30px;
+        margin-left: 30px;
+        }    
+
+
+            .time.white.short {
+                width: 40px;
+                position: absolute;
+                left: 1391px;
+                bottom: 45px;
+            }
+
+        
 /* Responsive */
 
 /* Tablet Version */
