--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,6 +67,14 @@ ul {
         /* border: 1px dashed #fff; */
     }
 
+        .icon:hover {
+            filter: invert(0);
+        }    
+
+        .sidebox h3:hover {
+            color: #fff;
+        }
+
         .sidebox h3 {
             color: #515151;
             font-size: 13px;
@@ -89,6 +97,8 @@ ul {
             font-weight: 700;
             margin-bottom: 10px;
         }
+
+        
 
         #small-icon {
             width: 18px;
@@ -143,6 +153,10 @@ ul {
             padding: 10px;
         }
 
+        #button:hover {
+            transform: scale(1.3);
+        }
+
             #button h5 {
                 font-size: 10px;
                 color: #fff;
@@ -169,6 +183,7 @@ ul {
             .card {
                 /* debug */
                 width: calc((100% / 6) - 10px);
+                position: relative;
                 /* height: 100px; */
             }
 
@@ -179,6 +194,29 @@ ul {
                 .card h5 {
                     color: #fff;
                 }
+
+                .album:hover {
+                    filter: opacity(50%);
+        
+                }
+
+                .card #play {
+                    display: none;
+                    color: #fff;
+                    font-size: 80px;
+                    position: absolute;
+                    top: 40%;
+                    left: 50%;
+                    transform: translate(-40%, -50%);
+                }
+
+                .card:hover #play {
+                    display: block;
+                    filter: invert(0);
+                    
+                }
+
+                
 
 
     #nav-cont {
@@ -197,6 +235,10 @@ ul {
             font-size: 13px;
             color: #6f7377;
         }
+
+         .item:hover {
+            color: #fff;
+         }  
 
 
     .title {
@@ -243,6 +285,10 @@ ul {
 
        #name h5 {
         color: #fff;
+       }
+
+       #subtle:hover {
+            text-decoration: underline;
        }
 
     .player-icon {
